--- a/index.html
+++ b/index.html
@@ -46,5 +46,26 @@
           </div>
         </nav>
       </div>
+      <div class="div2">
+        <div class="text">
+          <div class="divtexth1">
+            <h1 class="h1text">
+              Crypto <br />
+              Currency
+            </h1>
+            <p class="paratext">
+              Explicabo esse amet tempora quibusdam laudantium, laborum eaque
+              magnam fugiat hic? Esse dicta aliquid error repudiandae earum
+              suscipit fugiat molestias, veniam, vel architecto veritatis delectus
+              repellat modi impedit sequi.
+            </p>
+  
+            <input class="btn" type="button" value="Read More" />
+          </div>
+        </div>
+        <div class="mobileimg">
+          <img class="img1" src="/slider-img.png" alt="" />
+        </div>
+      </div>
   </body>
 </html>
