add second third div

--- a/index.html
+++ b/index.html
@@ -67,5 +67,49 @@
           <img class="img1" src="/slider-img.png" alt="" />
         </div>
       </div>
+      <div class="div3">
+        <div class="service">
+          <h2 class="h2ser">Our <span>Services</span></h2>
+          <p class="paraser">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration
+          </p>
+        </div>
+        <div class="service2">
+          <div class="currencywallet currencywallet1">
+            <img class="imgicon" src="/s1.png" alt="" />
+            <h2>Currency Wallet</h2>
+            <p>
+              fact that a reader will be distracted by <br />
+              the readable content of a page when looking <br />
+              at its layout. The point of using
+            </p>
+            <a class="readmore" href="#">Read More </a>
+          </div>
+          <div class="currencywallet">
+            <img class="imgicon" src="/s2.png" alt="" />
+            <h2>Security Storage</h2>
+            <p>
+              fact that a reader will be distracted by <br />
+              the readable content of a page when looking <br />
+              at its layout. The point of using
+            </p>
+            <a class="readmore" href="#">Read More </a>
+          </div>
+          <div class="currencywallet currencywallet2">
+            <img class="imgicon" src="/s3.png" alt="" />
+            <h2>Expert Support</h2>
+            <p>
+              fact that a reader will be distracted by <br />
+              the readable content of a page when looking <br />
+              at its layout. The point of using
+            </p>
+            <a class="readmore" href="#">Read More </a>
+          </div>
+        </div>
+        <div class="viewall">
+          <input class="viewall1" type="button" value="viewall" />
+        </div>
+      </div>
   </body>
 </html>
