--- a/index.html
+++ b/index.html
@@ -111,5 +111,34 @@
           <input class="viewall1" type="button" value="viewall" />
         </div>
       </div>
+      <div class="div4">
+        <div class="service">
+          <h2 class="h2ser about">About <span>us</span></h2>
+          <p class="paraser about">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration
+          </p>
+        </div>
+        <div class="crytpoimg">
+          <img class="img1" src="/about-img.png" alt="" />
+        </div>
+        <div class="finexo">
+          <h2>We Are Finexo</h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly believable.
+            If you are going to use a passage of Lorem Ipsum, you need to be sure
+            there isn't anything embarrassing hidden in the middle of text. All
+          </p>
+          <p>
+            Molestiae odio earum non qui cumque provident voluptates, repellendus
+            exercitationem, possimus at iste corrupti officiis unde alias eius
+            ducimus reiciendis soluta eveniet. Nobis ullam ab omnis quasi
+            expedita.
+          </p>
+          <input class="btn btn1" type="button" value="Read More" />
+        </div>
+      </div>
   </body>
 </html>
