--- a/index.html
+++ b/index.html
@@ -140,5 +140,61 @@
           <input class="btn btn1" type="button" value="Read More" />
         </div>
       </div>
+      <div class="div5">
+        <div class="why">
+          <h2 class="h2ser about1">Why Choose <span>us</span></h2>
+        </div>
+        <div class="image_box">
+          <img class="w1img" src="/w1.png" alt="" />
+          <h2>Expert Management</h2>
+          <p>
+            Incidunt odit rerum tenetur alias architecto asperiores omnis cumque
+            doloribus aperiam numquam! Eligendi corrupti, molestias laborum
+            dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
+            officia id, aspernatur nihil. Tempore laborum nesciunt ut veniam, nemo
+            officia ullam repudiandae repellat veritatis unde reiciendis possimus
+            animi autem natus
+          </p>
+        </div>
+        <div class="image_box">
+          <img class="w1img" src="/w2.png" alt="" />
+          <h2>Secure Investment</h2>
+          <p>
+            Incidunt odit rerum tenetur alias architecto asperiores omnis cumque
+            doloribus aperiam numquam! Eligendi corrupti, molestias laborum
+            dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
+            officia id, aspernatur nihil. Tempore laborum nesciunt ut veniam, nemo
+            officia ullam repudiandae repellat veritatis unde reiciendis possimus
+            animi autem natus
+          </p>
+        </div>
+        <div class="image_box">
+          <img class="w1img" src="/w3.png" alt="" />
+          <h2>Instant Trading</h2>
+          <p>
+            Incidunt odit rerum tenetur alias architecto asperiores omnis cumque
+            doloribus aperiam numquam! Eligendi corrupti, molestias laborum
+            dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
+            officia id, aspernatur nihil. Tempore laborum nesciunt ut veniam, nemo
+            officia ullam repudiandae repellat veritatis unde reiciendis possimus
+            animi autem natus
+          </p>
+        </div>
+        <div class="image_box">
+          <img class="w1img" src="/w4.png" alt="" />
+          <h2>Happy Customers</h2>
+          <p>
+            Incidunt odit rerum tenetur alias architecto asperiores omnis cumque
+            doloribus aperiam numquam! Eligendi corrupti, molestias laborum
+            dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus
+            officia id, aspernatur nihil. Tempore laborum nesciunt ut veniam, nemo
+            officia ullam repudiandae repellat veritatis unde reiciendis possimus
+            animi autem natus
+          </p>
+        </div>
+        <div class="viewall">
+          <input class="viewall1" type="button" value="Read More" />
+        </div>
+      </div>
   </body>
 </html>
