--- a/index.html
+++ b/index.html
@@ -196,5 +196,98 @@
           <input class="viewall1" type="button" value="Read More" />
         </div>
       </div>
+      <div class="div6">
+        <h2 class="h2ser about">Our <span>Team</span></h2>
+        <div class="team_contain">
+          <div class="team1div">
+            <img class="team_img1" src="/team-1.jpg" alt="" />
+            <h2>Joseph Brown</h2>
+            <p>Marketing Head</p>
+            <div class="icon">
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+          </div>
+          <div class="team1div">
+            <img class="team_img1" src="/team-2.jpg" alt="" />
+            <h2>Nancy White</h2>
+            <p>Marketing Head</p>
+            <div class="icon">
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+          </div>
+          <div class="team1div">
+            <img class="team_img1" src="/team-3.jpg" alt="" />
+            <h2>Earl Martinez</h2>
+            <p>Marketing Head</p>
+            <div class="icon">
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+          </div>
+          <div class="team1div">
+            <img class="team_img1" src="/team-4.jpg" alt="" />
+            <h2>Josephine Allard</h2>
+            <p>Marketing Head</p>
+            <div class="icon">
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a class="fa-brands1" href="#index.html"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
