add customers review section

--- a/index.html
+++ b/index.html
@@ -289,5 +289,38 @@
           </div>
         </div>
       </div>
+      <div class="div7">
+        <div class="why">
+          <h2 class="h2ser about1">What says our <span>Customers</span></h2>
+        </div>
+        <div class="clientdiv">
+          <div class="clientdiv1">
+            <img class="clientimg1" src="/client1.jpg" alt="" />
+            <p>LusDen</p>
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="clientpara">magma aliqua.&nbsp;Ut</p>
+            <p class="clientpara">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga at
+              omnis <br />
+              nobis, perferendis, repellat doloremque ipsum voluptate molestias
+              impedit<br />
+              quam iure, fugit et dignissimos quas!
+            </p>
+          </div>
+          <div class="clientdiv2">
+            <img class="clientimg2" src="/client2.jpg" alt="" />
+            <p>Zen Court</p>
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="clientpara">magma aliqua.&nbsp;Ut</p>
+            <p class="clientpara">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga at
+              omnis <br />
+              nobis, perferendis, repellat doloremque ipsum voluptate molestias
+              impedit<br />
+              quam iure, fugit et dignissimos quas!
+            </p>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
