--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               omnis <br />
               nobis, perferendis, repellat doloremque ipsum voluptate molestias
               impedit<br />
-              quam iure, fugit et dignissimos quas!
+              quam iure, 
             </p>
           </div>
         </div>
