changes in index

--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
               <a class="fa-brands1" href="#index.html"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <!-- <a class="fa-brands1" href="#index.html"
+              <a class="fa-brands1" href="#index.html"
                 ><i class="fa-brands fa-youtube"></i
-              ></a> -->
+              ></a>
             </div>
           </div>
         </div>
