--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga at
               omnis <br />
               nobis, perferendis, repellat doloremque ipsum voluptate molestias
-              impedit<br />
-              quam iure, 
+              <!-- impedit<br />
+              quam iure,  -->
             </p>
           </div>
         </div>
